--- a/stylesheets/screenchassis.css
+++ b/stylesheets/screenchassis.css
@@ -96,7 +96,7 @@ body {
 
 /* line 33, ../sass/screenchassis.scss */
 html {
-  background: url(../img/2121.jpg) no-repeat center center fixed;
+  background: url(../img/212.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -331,10 +331,10 @@ nav[role="full-horizontal"] ul > li > a {
   border-top-right-radius: 1em;
   text-align: center;
   align-content: center;
-  padding-top: 3em;
+  padding-top: 2em;
   padding-left: 3em;
   padding-right: 3em;
-  padding-bottom: 20em;
+  padding-bottom: 7em;
   overflow: auto;
   font: 'Cabin', sans-serif;
 }
@@ -350,7 +350,7 @@ nav[role="full-horizontal"] ul > li > a {
 #footer-background {
   background: #232020;
   width: 85%;
-  height: 20em;
+  height: 30px;
   margin-bottom: 3em;
   color: #f9f9f9;
   /*margin-top: 10em;*/
@@ -360,11 +360,11 @@ nav[role="full-horizontal"] ul > li > a {
   border-bottom-right-radius: 1em;
   text-align: center;
   align-content: center;
-  padding-top: 3em;
+  padding-top: 0.1em;
   padding-left: 3em;
   padding-right: 3em;
-  padding-bottom: 20em;
-  overflow: auto;
+  padding-bottom: 35em;
+  overflow: hidden;
   font: 'Cabin', sans-serif;
 }
 @media screen and (max-width: 500px) {
@@ -459,4 +459,68 @@ nav[role="full-horizontal"] ul > li > a {
   display: inline-block;
   font-size: 0;
   line-height: 0;
+}
+
+.image-right-container {
+  float: right;
+  width: 450px;
+}
+
+.image-left-container {
+  float: left;
+  width: 270px;
+}
+
+.image-right {
+  width: 430px;
+  height: auto;
+  margin: 10px 1px 1px 25px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-left {
+  float: left;
+  width: 250px;
+  height: auto;
+  margin: 10px 20px 1px -2px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-centre {
+  float: centre;
+  width: 400px;
+  height: auto;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-text {
+  font-size: 12px;
+  width: auto;
+  margin: 0;
+  text-align: centre; //box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.carousel-container {
+    width: auto;
+    max-width: 1000px;
+    margin: 10px 50px;
+    text-align: center;
+}
+
+.slider-image{
+	height:400px;
+	width: auto;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
