--- a/stylesheets/screencooling.css
+++ b/stylesheets/screencooling.css
@@ -334,7 +334,7 @@ nav[role="full-horizontal"] ul > li > a {
   padding-top: 3em;
   padding-left: 3em;
   padding-right: 3em;
-  padding-bottom: 20em;
+  padding-bottom: 5em;
   overflow: auto;
   font: 'Cabin', sans-serif;
 }
@@ -360,11 +360,11 @@ nav[role="full-horizontal"] ul > li > a {
   border-bottom-right-radius: 1em;
   text-align: center;
   align-content: center;
-  padding-top: 3em;
+  padding-top: 2em;
   padding-left: 3em;
   padding-right: 3em;
   padding-bottom: 20em;
-  overflow: auto;
+  overflow: hidden;
   font: 'Cabin', sans-serif;
 }
 @media screen and (max-width: 500px) {
@@ -461,32 +461,48 @@ nav[role="full-horizontal"] ul > li > a {
   line-height: 0;
 }
 
-.image-right
-{
-	float:right;
-	width:400px;
-	height:auto;
-	margin:20px;
-	border-radius:10px;
-	box-shadow:0 0 5px 2px rgba(0,0,0,0.50);
+.image-right-container {
+  float: right;
+  width: 200px;
+  text-align: center; //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
 }
 
-.image-left
-{
-	float:left;
-	width:400px;
-	height:auto;
-	margin:20px;
-	border-radius:10px;
-	box-shadow:0 0 5px 2px rgba(0,0,0,0.50);
+.image-left-container {
+  float: left;
+  width: 310px;
+  text-align: center; //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
 }
 
-.image-centre
-{
-	float:centre;
-	width:400px;
-	height:auto;
-	margin:20px;
-	border-radius:10px;
-	box-shadow:0 0 5px 2px rgba(0,0,0,0.50);
+.image-right {
+	float: right;
+  width: 180px;
+  height: auto;
+  margin: 20px auto 1px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-left {
+  float: left;
+  width: 290px;
+  height: auto;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-centre {
+  float: centre;
+  width: 500px;
+  height: auto;
+  margin: 20px 0 0 5px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-text {
+  font-size: 12px;
+  width: auto;
+  margin: 0;
+  text-align: centre;
 }
