--- a/stylesheets/screenswingarm.css
+++ b/stylesheets/screenswingarm.css
@@ -331,10 +331,10 @@ nav[role="full-horizontal"] ul > li > a {
   border-top-right-radius: 1em;
   text-align: center;
   align-content: center;
-  padding-top: 3em;
+  padding-top: 2em;
   padding-left: 3em;
   padding-right: 3em;
-  padding-bottom: 20em;
+  padding-bottom: 7em;
   overflow: auto;
   font: 'Cabin', sans-serif;
 }
@@ -364,7 +364,7 @@ nav[role="full-horizontal"] ul > li > a {
   padding-left: 3em;
   padding-right: 3em;
   padding-bottom: 20em;
-  overflow: auto;
+  overflow: hidden;
   font: 'Cabin', sans-serif;
 }
 @media screen and (max-width: 500px) {
@@ -461,32 +461,47 @@ nav[role="full-horizontal"] ul > li > a {
   line-height: 0;
 }
 
-.image-right
-{
-	float:right;
-	width:400px;
-	height:auto;
-	margin:20px;
-	border-radius:10px;
-	box-shadow:0 0 5px 2px rgba(0,0,0,0.50);
+.image-right-container {
+  float: right;
+  width: 400px;
 }
 
-.image-left
-{
-	float:left;
-	width:100px;
-	height:auto;
-	margin:20px;
-	border-radius:10px;
-	box-shadow:0 0 5px 2px rgba(0,0,0,0.50);
+.image-left-container {
+  float: left;
+  width: 190px;
+  text-align: center; //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
 }
 
-.image-centre
-{
-	float:centre;
-	width:400px;
-	height:auto;
-	margin:20px;
-	border-radius:10px;
-	box-shadow:0 0 5px 2px rgba(0,0,0,0.50);
+.image-right {
+	float: right;
+  width: 380px;
+  height: auto;
+  margin: 20px 2px 1px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-left {
+  float: left;
+  width: 170px;
+  height: auto;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-centre {
+  float: centre;
+  width: 400px;
+  height: auto;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+.image-text {
+  font-size: 12px;
+  width: 100%;
+  margin: 0;
+  text-align: center; //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
 }
