--- a/stylesheets/screenindex.css
+++ b/stylesheets/screenindex.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screenindex.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,500|Cabin:400,700);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,500|Cabin:400,700|Roboto:300);
 /* line 5, ../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -140,7 +140,7 @@ body {
   vertical-align: top;
   display: inline-block;
   *display: inline;
-  zoom: 1; 
+  zoom: 1;
   -webkit-transition: all 0.3;
   -moz-transition: all 0.3;
   -ms-transition: all 0.3;
@@ -510,13 +510,19 @@ nav[role="full-horizontal"] ul > li > a {
 .carousel-container {
     width: auto;
     max-width: 1000px;
-    margin: 10px 50px;
+    margin: 10px auto;
     text-align: center;
+
 }
 
 .slider-image{
-	height:400px;
+	height:350px;
 	width: auto;
+}
+
+.slider-item{
+margin: 5px 20px;
+
 }
 
 .dropdown-content {
