--- a/stylesheets/screenevents.css
+++ b/stylesheets/screenevents.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screenevents.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,500|Cabin:400,700);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,500|Cabin:400,700|Roboto:300);
 /* line 5, ../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -329,14 +329,15 @@ nav[role="full-horizontal"] ul > li > a {
   margin-right: auto;
   border-top-left-radius: 1em;
   border-top-right-radius: 1em;
-  text-align: center;
+  text-align: justify;
   align-content: center;
   padding-top: 3em;
   padding-left: 3em;
   padding-right: 3em;
   padding-bottom: 7em;
   overflow: auto;
-  font: 'Cabin', sans-serif;
+  font-family: sans-serif;
+  font: 1em 'Roboto';
 }
 @media screen and (max-width: 500px) {
   /* line 283, ../sass/screen.scss */
