--- a/stylesheets/screenindex.css
+++ b/stylesheets/screenindex.css
@@ -167,6 +167,27 @@ body {
   transition: all 0.3;
 }
 
+@media only screen and (max-width: 500px) {
+  /* line 99, ../sass/screen.scss */
+  background: #232020;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 15;
+  padding-top: 0.6em;
+  vertical-align: middle;
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+  flex-grow: 1;
+  -webkit-transition: all 0.3;
+  -moz-transition: all 0.3;
+  -ms-transition: all 0.3;
+  -o-transition: all 0.3;
+  transition: all 0.3;
+  }
+}
+  
+
 /* line 122, ../sass/screen.scss */
 .topLogo {
   background: #E71B64;
@@ -234,6 +255,20 @@ body {
   margin-bottom: 4em;
 }
 
+@media only screen and (max-width: 500px) {
+  /* line 180, ../sass/screen.scss */
+  #intro-background {
+	 background: rgba(35, 32, 32, 0.5);
+  color: #E7E0EB;
+  border-radius: 1em 1em 1em 1em;
+  width: 22em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2em;
+	
+  }
+}
+
 /* line 191, ../sass/screen.scss */
 nav[role="full-horizontal"] {
   display: inline-block;
@@ -288,7 +323,7 @@ nav[role="full-horizontal"] ul > li > a {
 }
 
 /* small screens */
-@media screen and (max-width: 44em) {
+@media only screen and (max-width: 44em) {
   /* line 247, ../sass/screen.scss */
   body {
     margin: 1.5em 0;
@@ -339,11 +374,17 @@ nav[role="full-horizontal"] ul > li > a {
   overflow: auto;
   font: 'Cabin', sans-serif;
 }
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   /* line 283, ../sass/screen.scss */
   #content-background {
+	  background: rgba(35, 32, 32, 0.5);
+	color: #E7E0EB;
     padding-left: 1em;
     padding-right: 1em;
+	width: auto;
+	height: auto;
+	align-content: center;
+	
   }
 }
 
@@ -368,9 +409,27 @@ nav[role="full-horizontal"] ul > li > a {
   overflow: hidden;
   font: 'Cabin', sans-serif;
 }
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   /* line 316, ../sass/screen.scss */
   #footer-background {
+	 background: #232020;
+  width: 85%;
+  height: 5em;
+  margin-bottom: 1em;
+  color: #f9f9f9;
+  /*margin-top: 3em;*/
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+  text-align: center;
+  align-content: center;
+  padding-top: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 15em;
+  overflow: hidden;
+  font: 'Cabin', sans-serif;
     padding-left: 1em;
     padding-right: 1em;
   }
@@ -424,7 +483,7 @@ nav[role="full-horizontal"] ul > li > a {
   *display: inline;
   zoom: 1;
 }
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   /* line 387, ../sass/screen.scss */
   .col1 {
     margin-left: auto;
@@ -446,7 +505,7 @@ nav[role="full-horizontal"] ul > li > a {
   *display: inline;
   zoom: 1;
 }
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   /* line 409, ../sass/screen.scss */
   .col2 {
     margin-left: auto;
@@ -466,6 +525,15 @@ nav[role="full-horizontal"] ul > li > a {
   float: right;
   width: 250px;
   text-align: center; //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
+}
+
+@media only screen and (max-width: 500px) {
+  /* line 409, ../sass/screen.scss */
+  .image-right-container {
+    float: right;
+  width: 250px;
+  text-align: center; //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .image-left-container {
@@ -514,9 +582,27 @@ nav[role="full-horizontal"] ul > li > a {
     text-align: center;
 }
 
+@media only screen and (max-width: 500px) {
+  /* line 409, ../sass/screen.scss */
+  .carousel-container {
+    width: auto;
+    max-width: 460px;
+    margin: 5px auto;
+    text-align: center;
+  }
+}
+
 .slider-image{
 	height:350px;
 	width: auto;
+}
+
+@media only screen and (max-width: 500px) {
+  /* line 409, ../sass/screen.scss */
+  .carousel-container {
+    height:100px;
+	width: auto;
+  }
 }
 
 .slider-item{
