--- a/stylesheets/screenintro.css
+++ b/stylesheets/screenintro.css
@@ -517,8 +517,8 @@ nav[role="full-horizontal"] ul > li > a {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
 }
 
-.image-centre {
-  float: centre;
+.image-center {
+  float: center;
   height: auto;
   margin: 20px;
   border-radius: 10px;
