--- a/stylesheets/screenintro.css
+++ b/stylesheets/screenintro.css
@@ -489,16 +489,22 @@ nav[role="full-horizontal"] ul > li > a {
   width: 190px;
 }
 
+.image-center-container {
+  float: center;
+  width: 300px;
+  height: auto;
+}
+
 .images  {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 300px;
+  height: 200px;
 }
 
 .imagebox {
-	height: 280px;
+	height: 180px;
 	width: auto;
 }
  
@@ -517,10 +523,15 @@ nav[role="full-horizontal"] ul > li > a {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
 }
 
-.image-center {
+.image-center2 {
+  display: block;
   float: center;
   height: auto;
-  margin: 20px;
+  width: 380px;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  margin-right: auto;
+  margin-left: auto;
   border-radius: 10px;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
 }
@@ -528,14 +539,14 @@ nav[role="full-horizontal"] ul > li > a {
 .image-text {
   font-size: 12px;
   width: auto;
-  margin: 5px 0 0;
+  margin: 5px 0 3px 0;
   text-align: center;
 }
 
 .carousel-container {
     width: auto;
     max-width: 1000px;
-    margin: 10px auto;
+    margin: 10px auto 2px auto;
     text-align: center;
 }
 
