--- a/stylesheets/screenintro.css
+++ b/stylesheets/screenintro.css
@@ -25,6 +25,7 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
+
 /* line 22, ../../../../.rvm/gems/ruby-2.4.1/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
@@ -116,6 +117,14 @@ body {
   position: fixed;
 }
 
+@media only screen and (max-width: 480px) {
+  /* line 62, ../sass/screen.scss */
+#header-background{  
+  width: 95%;
+  height: 6em;
+  }
+}
+
 /* line 74, ../sass/screen.scss */
 #logo {
   background: #db111d;
@@ -139,6 +148,14 @@ body {
   transition: all 0.3;
 }
 
+@media only screen and (max-width: 500px) {
+  /* line 74, ../sass/screen.scss */
+#logo{  
+  width: 4em;
+  height: 1.5em;
+  }
+}
+
 /* line 99, ../sass/screen.scss */
 #nav-menu {
   background: #232020;
@@ -156,6 +173,16 @@ body {
   -ms-transition: all 0.3;
   -o-transition: all 0.3;
   transition: all 0.3;
+}
+
+@media only screen and (max-width: 500px) {
+  /* line 99, ../sass/screen.scss */
+#nav-menu{  
+  width: 100%;
+  height: 3.5em;
+  padding-top: 1.5em;
+  z-index: 9;
+  }
 }
 
 /* line 122, ../sass/screen.scss */
@@ -188,6 +215,14 @@ body {
   transition: all 0.3;
 }
 
+@media only screen and (max-width: 480px) {
+  /* line 122, ../sass/screen.scss */
+.toplogo{  
+  width: 10%;
+  height: 5em;
+  }
+}
+
 /* line 154, ../sass/screen.scss */
 .topNav {
   background: #ffffff;
@@ -207,6 +242,17 @@ body {
   -ms-transition: all 0.3;
   -o-transition: all 0.3;
   transition: all 0.3;
+}
+
+@media only screen and (max-width: 480px) {
+  /* line 154, ../sass/screen.scss */
+.topNav{  
+  width: auto;
+  height: 2.5em;
+  margin-top: 2em;
+  z-index: 2;
+  display: inline-block;
+  }
 }
 
 /* line 176, ../sass/screen.scss */
@@ -279,10 +325,16 @@ nav[role="full-horizontal"] ul > li > a {
 }
 
 /* small screens */
-@media screen and (max-width: 44em) {
+@media only screen and (max-width: 500px) {
   /* line 247, ../sass/screen.scss */
   body {
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     margin: 1.5em 0;
+    font: 0.4em 'Oswald', sans-serif;
+
   }
 
   /* line 252, ../sass/screen.scss */
@@ -299,18 +351,8 @@ nav[role="full-horizontal"] ul > li > a {
   nav[role="full-horizontal"] ul > li:after {
     box-shadow: none;
   }
-
-  /*Top Menus for small screens*/
-  /* line 269, ../sass/screen.scss */
-  #logo {
-    position: relative;
-  }
-
-  /* line 274, ../sass/screen.scss */
-  #nav-menu {
-    position: relative;
-  }
 }
+
 /* line 283, ../sass/screen.scss */
 #content-background {
   background: #f9f9f9;
@@ -325,7 +367,7 @@ nav[role="full-horizontal"] ul > li > a {
   padding-top: 2em;
   padding-left: 3em;
   padding-right: 3em;
-  padding-bottom: 7em;
+  padding-bottom: 2em;
   overflow: auto;
   font-family: sans-serif;
   font: 1em 'Roboto';
@@ -336,6 +378,8 @@ nav[role="full-horizontal"] ul > li > a {
   #content-background {
     padding-left: 1em;
     padding-right: 1em;
+	width: 95%;
+	padding-bottom: 2em;
   }
 }
 
@@ -360,11 +404,17 @@ nav[role="full-horizontal"] ul > li > a {
   overflow: hidden;
   font: 'Cabin', sans-serif;
 }
+
 @media screen and (max-width: 500px) {
   /* line 316, ../sass/screen.scss */
   #footer-background {
+	width: 95%;
+	height: 12em;
     padding-left: 1em;
     padding-right: 1em;
+	padding-top: 3em;
+    padding-left: 3em;
+	padding-bottom: 15em
   }
 }
 
@@ -390,11 +440,32 @@ nav[role="full-horizontal"] ul > li > a {
   font: 'Cabin', sans-serif;
 }
 
+@media screen and (max-width: 500px) {
+  /* line 316, ../sass/screen.scss */
+  #footer-background2 {
+	width: 95%;
+	height: 30em;
+    padding-left: 1em;
+    padding-right: 1em;
+	padding-top: 3em;
+    padding-left: 3em;
+	padding-bottom: 10em;
+	margin-bottom: 2em;
+  }
+}
+
 /* line 354, ../sass/screen.scss */
 #title1 {
   text-align: center;
   font: 3.5em 'Oswald', sans-serif;
   color: #232020;
+}
+
+@media screen and (max-width: 500px) {
+  /* line 354, ../sass/screen.scss */
+  #title1 {
+	font: 2.5em
+  }
 }
 
 /* line 360, ../sass/screen.scss */
@@ -480,8 +551,31 @@ nav[role="full-horizontal"] ul > li > a {
   float: right;
 }
 
+@media screen and (max-width: 500px) {
+ .image-right-container {
+	width: 50%;
+   }
+}
+
+.image-right-container2 {
+  float: right;
+  width: 180px
+}
+
+@media screen and (max-width: 500px) {
+ .image-right-container2 {
+	width: 50%;
+   }
+}
+
 .image-left-container {
   float: left;
+}
+
+@media screen and (max-width: 500px) {
+ .image-left-container {
+	width: 50%;
+    }
 }
 
 .image-left-container2 {
@@ -489,10 +583,26 @@ nav[role="full-horizontal"] ul > li > a {
   width: 190px;
 }
 
+@media screen and (max-width: 500px) {
+ .image-left-container2 {
+	width: 50%;
+   }
+}
+
 .image-center-container {
   float: center;
-  width: 300px;
+  width: 500px;
   height: auto;
+  margin-left: 20em;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 500px) {
+ .image-center-container {
+	width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .images  {
@@ -507,12 +617,33 @@ nav[role="full-horizontal"] ul > li > a {
 	height: 180px;
 	width: auto;
 }
- 
+
 .image-right {
   height: auto;
   margin: 8px 1px 1px 25px;
   border-radius: 10px;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+@media screen and (max-width: 500px) {
+ .image-right {
+	width: 95%;
+	margin: 8px 1px 1px 10px;
+  }
+}
+
+.image-right2 {
+  height: auto;
+  margin: 8px 1px 1px 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+@media screen and (max-width: 500px) {
+ .image-right2 {
+	width: 85%;
+	margin: 10px 1px 1px 15px;
+  }
 }
 
 .image-left {
@@ -521,6 +652,29 @@ nav[role="full-horizontal"] ul > li > a {
   margin: 10px 20px 1px -2px;
   border-radius: 10px;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+@media screen and (max-width: 500px) {
+ .image-left {
+	width: 95%;
+  }
+}
+
+.image-center {
+  float: center;
+  height: auto;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+}
+
+@media screen and (max-width: 500px) {
+ .image-center {
+	width: 95%;
+  }
 }
 
 .image-center2 {
@@ -536,11 +690,25 @@ nav[role="full-horizontal"] ul > li > a {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
 }
 
+@media screen and (max-width: 500px) {
+ .image-center2 {
+	width: 95%;
+  }
+}
+
 .image-text {
   font-size: 12px;
   width: auto;
   margin: 5px 0 3px 0;
   text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+ .image-text {
+	font-size: 7px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .carousel-container {
@@ -550,14 +718,38 @@ nav[role="full-horizontal"] ul > li > a {
     text-align: center;
 }
 
+@media only screen and (max-width: 500px) {
+  .carousel-container {
+    width: 95%;
+    max-width: 500px;
+    margin: 5px auto 5px auto;
+    text-align: center;
+	margin-top: 2em;
+  margin-bottom: 2em;
+  }
+}
+
 .slider-image{
 	height:350px;
 	width: auto;
 }
 
-.slider-item{
-margin: 5px 20px;
+@media only screen and (max-width: 500px) {
+.slider-image {
+    height:100px;
+	width: auto;
+  }
+}
 
+.slider-item{
+	margin: 5px 20px;
+
+}
+
+@media only screen and (max-width: 500px) {
+.slider-item {
+    margin: 5px 10px;
+  }
 }
 
 .dropdown-content {
