--- a/stylesheets/screenindex.css
+++ b/stylesheets/screenindex.css
@@ -184,7 +184,7 @@ body {
   /* line 74, ../sass/screen.scss */
 #logo{  
   width: 4em;
-  height: 2em;
+  height: 1.5em;
   }
 }
 
@@ -211,7 +211,7 @@ body {
   /* line 99, ../sass/screen.scss */
 #nav-menu{  
   width: 100%;
-  height: 4em;
+  height: 3.5em;
   padding-top: 0.5em;
   }
 }
@@ -279,9 +279,9 @@ body {
   /* line 154, ../sass/screen.scss */
 .topNav{  
   width: auto;
-  height: 3em;
-  margin-top: 0.4em;
-  z-index: 3;
+  height: 2.5em;
+  margin-top: 2em;
+  z-index: 2;
   display: inline-block;
   *display: inline;
   }
@@ -290,13 +290,6 @@ body {
 /* line 176, ../sass/screen.scss */
 #spacer-div {
   height: 10em;
-}
-
-@media only screen and (max-width: 480px) {
-  /* line 176, ../sass/screen.scss */
-#spacer-div{  
-  height: 2em;
-  }
 }
 
 /* line 180, ../sass/screen.scss */
@@ -308,22 +301,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 4em;
-}
-
-@media only screen and (max-width: 500px) {
-  /* line 180, ../sass/screen.scss */
-  #intro-background {
-  background: rgba(35, 32, 32, 0.5);
-  color: #E7E0EB;
-  border-radius: 1em 1em 1em 1em;
-  width: 27em;
-  margin-top: 8em;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 6em;
-  font-size: 0.5;
-	
-  }
 }
 
 /* line 191, ../sass/screen.scss */
@@ -437,8 +414,8 @@ nav[role="full-horizontal"] ul > li > a {
 	height: 230px;
 	align-content: center;
 	padding-top: 4em;
-	padding-bottom: 10em;
-	overflow: auto;
+	padding-bottom: 4em;
+	overflow: hidden;
   }
 }
 
