--- a/stylesheets/screenindex.css
+++ b/stylesheets/screenindex.css
@@ -566,6 +566,13 @@ margin: 5px 20px;
         color: #E7E0EB;
         text-decoration: none;
         font-size: 1.4em; }
+		
+		@media only screen and (max-width: 500px){
+		.navbar ul > li > a {
+        color: #E7E0EB;
+        text-decoration: none;
+        font-size: 0.9em; }}
+
 
 /* line 11, ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_navbar.scss */
 .navbar {
@@ -846,7 +853,12 @@ li.dropdown {
     /* line 193, ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_navbar.scss */
     .navbar-toggle {
       display: none; } }
-
+@media (max-width: 820px) {
+	  .navbar-toggle .icon-bar {
+    display: none;
+    width: 2px;
+    height: 2px;
+border-radius: 1px; }}
 /* line 286, ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_navbar.scss */
 .navbar-form {
   margin-left: -15px;
@@ -1159,6 +1171,16 @@ li.dropdown {
       position: relative;
       display: block;
       padding: 21px 20px; }
+	   @media (max-width: 819px) {
+	  .nav > li > a {
+      position: relative;
+      display: block;
+	   padding: 10px 10px; }}
+	   @media (max-width: 500px) {
+	  .nav > li > a {
+      position: relative;
+      display: block;
+	   padding: 7px 7px; }	}  
       /* line 23, ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_navs.scss */
       .nav > li > a:hover, .nav > li > a:focus {
         text-decoration: none;
@@ -1302,10 +1324,11 @@ li.dropdown {
 /* line 19, ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_clearfix.scss */
 .navbar-header:after {
   clear: both; }
-@media (min-width: 820px) {
+@media (max-width: 820px) {
   /* line 31, ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_navbar.scss */
   .navbar-header {
     float: left;
+	width: 5%
 	} 
 	}
 
@@ -1372,5 +1395,3 @@ li.dropdown {
     .container-fluid > .navbar-collapse {
       margin-right: 0;
       margin-left: 0; } }
-	  
-	  
