--- a/stylesheets/screenintro.css
+++ b/stylesheets/screenintro.css
@@ -726,14 +726,21 @@ nav[role="full-horizontal"] ul > li > a {
     border-radius: 0.25em;
 }
 
-.category{
-    border-radius: 10px;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
-}
-
 .category {
-    width: 100%;
-    height: auto;
+    width: auto;
+	height: 85%;
+     margin: 8px 1px 1px 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+ }
+
+.category2 {
+    width: auto;
+	height: 270px;
+	float: center;
+     margin: 8px 1px 1px 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
 }
 
 @media only screen and (max-width: 700px){
@@ -751,7 +758,9 @@ nav[role="full-horizontal"] ul > li > a {
 .contain {
     padding: 0 6px;
     float: left;
-    width: 24.99999%;
+    height: 250px;
+	width: auto;
+	 display: inline-block
 }
 
 @media only screen and (max-width: 700px){
@@ -767,6 +776,14 @@ nav[role="full-horizontal"] ul > li > a {
 		float: center;
     }
 }
+
+.contain2 {
+	width: 100%;
+	height: 90%;
+    padding: 0 6px;
+    float: center;
+	display: inline-block
+    }
 
 .clearfix:after {
     content: "";
