--- a/stylesheets/screenintro.css
+++ b/stylesheets/screenintro.css
@@ -620,6 +620,15 @@ nav[role="full-horizontal"] ul > li > a {
   }
 }
 
+.image-text-banner {
+	display: block;
+  font-size: 12px;
+  width: 100%;
+  margin: 5px 0 3px 0;
+  vertical-align: bottom;
+  text-align: center;
+}
+
 .image-text {
   font-size: 12px;
   width: auto;
@@ -727,9 +736,9 @@ nav[role="full-horizontal"] ul > li > a {
 }
 
 .category {
-    width: auto;
-	height: 85%;
-     margin: 8px 1px 1px 15px;
+    width: 95%;
+	height: auto;
+     margin: 10px 1px 1px 20px;
   border-radius: 10px;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
  }
@@ -759,8 +768,8 @@ nav[role="full-horizontal"] ul > li > a {
     padding: 0 6px;
     float: left;
     height: 250px;
-	width: auto;
-	 display: inline-block
+	width: 100%;
+	 display: inline-block;
 }
 
 @media only screen and (max-width: 700px){
@@ -777,6 +786,53 @@ nav[role="full-horizontal"] ul > li > a {
     }
 }
 
+.banner {
+  display: flex;
+  width: 100%;
+  margin-top: 1em;
+  overflow-x: auto;
+  margin-bottom: 0.25em;
+  justify-content: space-between;
+  }
+  
+.banner2 {
+   vertical-align: top;
+    text-align: center;
+    width: 17.5vw;
+  }
+
+  .banner3 {
+   vertical-align: top;
+    text-align: center;
+    width: 35vw;
+	margin-top: 0.5em;
+  }
+  
+   .banner4 {
+   vertical-align: top;
+    text-align: center;
+    width: 25vw;
+	margin-right: 0.5em;
+	margin-top: 0.5em;
+  }
+  
+     .banner5 {
+   vertical-align: top;
+    text-align: center;
+    width: 17vw;
+	margin-left: 0.5em;
+	margin-right: 1em;
+	margin-top: 0.5em;
+  }
+  
+ .category-banner {
+    width: 95%;
+	height: auto;
+     
+  border-radius: 10px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.50);
+ }
+  
 .contain2 {
 	width: 100%;
 	height: 90%;
