--- a/stylesheets/screenintro.css
+++ b/stylesheets/screenintro.css
@@ -1758,4 +1758,27 @@ border-radius: 1px; }}
       margin-right: 0;
       margin-left: 0; } }
 	  
-	
+.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+.gallery:hover {
+    border: 1px solid #777;
+}
+
+.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+.desc {
+display: block;
+  font-size: 12px;
+  width: auto;
+  margin: 5px 0 3px 0;
+  vertical-align: bottom;
+  text-align: center;
+}
